--- a/package.json
+++ b/package.json
@@ -15,7 +15,13 @@
     "@mui/icons-material": "^5.16.5",
     "@mui/material": "^5.16.5",
     "@mui/material-nextjs": "^5.16.4",
+    "cookies-next": "^4.2.1",
+    "emoji-picker-react": "^4.11.1",
+    "firebase": "^10.12.4",
+    "firebase-admin": "^12.3.0",
     "next": "14.2.5",
+    "next-auth": "^4.24.7",
+    "next-video": "^1.1.4",
     "react": "^18",
     "react-dom": "^18"
   },
@@ -25,6 +31,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
+    "server-only": "^0.0.1",
     "typescript": "^5"
   }
 }
