--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "next-auth": "^4.24.7",
     "next-video": "^1.1.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-drag-drop-files": "^2.3.10"
   },
   "devDependencies": {
     "@types/node": "^20",
